--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- Informação -->
       <div class="informacao">
         <h2>ReinatoMilgrau_</h2>
-        <p>O REI DO ENTRETENIMENTO</p>
+        <p>ENTRETENIMENTO É AQUI!</p>
       </div>
       <!-- Links -->
       <div class="links">
@@ -97,6 +97,15 @@
           <div class="texto">
             <h3>Tik Tok</h3>
             <p>Veja nossas publicações no Tik Tok</p>
+          </div>
+        </a>
+        <a href="">
+          <div class="icone">
+            <img src="./img/Threads_(app).png">
+          </div>
+          <div class="texto">
+            <h3>Threads</h3>
+            <p>Veja nossas publicações no Threads</p>
           </div>
         </a>
 
