--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>Veja nossas publicações no Tik Tok</p>
           </div>
         </a>
-        <a href="">
+        <a href="https://www.threads.net/@reinatomilgrau_">
           <div class="icone">
             <img src="./img/Threads_(app).png">
           </div>
