--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </a>
         <!-- Link -->
-        <a href="">
+        <a href="https://www.tiktok.com/@reinatomilgrau_">
           <div class="icone">
             <img src="./img/tiktok.png">
           </div>
